--- a/moto/ec2/resources/latest_amis/ap-southeast-3.json
+++ b/moto/ec2/resources/latest_amis/ap-southeast-3.json
@@ -1,11 +1,27 @@
 [
   {
-    "ami_id": "ami-0321e09524ba307cd",
+    "ami_id": "ami-03f7d6844ec11ca7d",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0db581c79dde67a5a",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -16,12 +32,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0667c5c08ef2aeddb",
+    "ami_id": "ami-0e8ff7fa695d6d6b4",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux 2 AMI 2.0.20230307.0 x86_64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230307.0-x86_64-ebs",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -32,60 +48,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-08c82f222bd6ea38e",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-09b2a244ec4fde60e",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-056ace9b5c299cf5b",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0d0d46eb1501c5420",
+    "ami_id": "ami-058eea9e9b3bef767",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -96,44 +64,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-06bb3242dec2eeb44",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0a2e6e557a339930e",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-06bf04f9e3de77e37",
+    "ami_id": "ami-0b6bea782fcfad6e8",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230307.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "amzn2-ami-hvm-2.0.20230307.0-arm64-gp2",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -144,44 +80,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0105f582118f5c75b",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0d47bc522eab37c9a",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-08412f6a4cac677f4",
+    "ami_id": "ami-006917f5292549770",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 arm64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2023-ami-minimal-2023.0.20230308.0-kernel-6.1-arm64",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -192,12 +96,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0dbbdadea5c056087",
+    "ami_id": "ami-09df290927fd9817c",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230306.1-x86_64-ebs",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -208,12 +112,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0e6634622eaaad748",
+    "ami_id": "ami-07800d257e46128fa",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "amzn-ami-hvm-2018.03.0.20230306.1-x86_64-ebs",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -224,12 +128,172 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-03bfec71105bbb103",
+    "ami_id": "ami-0c3ac112d26beab09",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230307.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230307.0-x86_64-gp2",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0a7066ac6d16064bb",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 arm64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2023-ami-2023.0.20230308.0-kernel-6.1-arm64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-03543eb5380c21308",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 x86_64 HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-2023.0.20230308.0-kernel-6.1-x86_64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-09f384e7eebfe3f8b",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230307.0 arm64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230307.0-arm64-gp2",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0b6c13911b9a5b1ee",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 x86_64 Minimal HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-minimal-2023.0.20230308.0-kernel-6.1-x86_64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-04480b5eae119206a",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0db8f75214ad362ec",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230307.0 arm64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230307.0-arm64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0c7328c849d566b3c",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230306.1-x86_64-gp2",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0dee69e3dcccce2fb",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230307.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230307.0-x86_64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0193fcce12c6c47e2",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230307.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230307.0-x86_64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0fe15b34a99c7962d",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230307.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230307.0-x86_64-gp2",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
