--- a/moto/ec2/resources/latest_amis/sa-east-1.json
+++ b/moto/ec2/resources/latest_amis/sa-east-1.json
@@ -1,11 +1,27 @@
 [
   {
-    "ami_id": "ami-037a5ad65570b5d77",
+    "ami_id": "ami-0054772d386e00cfc",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 PV ebs",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230307.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-pv-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230307.0-x86_64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-041c600004dc39f62",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 Minimal PV ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-minimal-pv-2018.03.0.20230306.1-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -16,28 +32,12 @@
     "virtualization_type": "paravirtual"
   },
   {
-    "ami_id": "ami-093d714091ce0b0db",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0688871fb6d7d5704",
+    "ami_id": "ami-079734c423e04108b",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 arm64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2023-ami-2023.0.20230308.0-kernel-6.1-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -48,12 +48,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0af622ab31000bc40",
+    "ami_id": "ami-0adff13181fe9a4fd",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 x86_64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "al2023-ami-2023.0.20230308.0-kernel-6.1-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -64,12 +64,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0b7101e993ea27f3a",
+    "ami_id": "ami-0dd060d2c88e19f6b",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -80,12 +80,60 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0fb7b417f44075c95",
+    "ami_id": "ami-0e902319a0475a65f",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230307.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230307.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0959ae9b0b19a7567",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 x86_64 Minimal HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-minimal-2023.0.20230308.0-kernel-6.1-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-06b993ab9dfd0678b",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230306.1-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0c29a9d7792b60c74",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230308.0 arm64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "al2023-ami-minimal-2023.0.20230308.0-kernel-6.1-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -96,12 +144,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-011f0f476acec9b0f",
+    "ami_id": "ami-0a470ce586f0eeb70",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -112,12 +160,28 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-06edd763bf1d6dbf8",
+    "ami_id": "ami-011f9bbe27d56ee87",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230307.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230307.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-018aa6cec48e8b306",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230307.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230307.0-arm64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -128,76 +192,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0a5b171fce802079a",
+    "ami_id": "ami-03ae1be8e4cb5da85",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 PV ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-040ffd031f9ee6af5",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-08d96f6ebfff61293",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-00684166998825a53",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0fe1dd4af0e464bda",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal PV ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-minimal-pv-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "amzn-ami-pv-2018.03.0.20230306.1-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -208,12 +208,12 @@
     "virtualization_type": "paravirtual"
   },
   {
-    "ami_id": "ami-0886a3d2c8b721217",
+    "ami_id": "ami-09fe0301e24cb4fba",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux 2 AMI 2.0.20230307.0 x86_64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230307.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -224,44 +224,108 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-093e0c0eaca81c8ff",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-04d4abf1a06415e91",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0c6d634b7a03b447f",
+    "ami_id": "ami-0b9de9b3cc811697d",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-05f2d34f6af332ce0",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230307.0 arm64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230307.0-arm64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0c52d72772c03970c",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230307.0 arm64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230307.0-arm64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-031986ed22dfc4bd8",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0b7e70db63fc4e93d",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230306.1-x86_64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0eae891dea89afe48",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230306.1 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230306.1-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-06fdd575cd7adafbc",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230307.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230307.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
